--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "speed-type",
+  "name": "speedtype",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --port 8080"
   },
   "devDependencies": {
     "typescript": "^4.9.3",
